[gd_scene load_steps=20 format=2]

[ext_resource path="res://Art/frames/chort_run_anim_f3.png" type="Texture" id=1]
[ext_resource path="res://Art/frames/chort_idle_anim_f3.png" type="Texture" id=2]
[ext_resource path="res://Art/frames/chort_idle_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://Art/frames/chort_idle_anim_f0.png" type="Texture" id=4]
[ext_resource path="res://Art/frames/chort_run_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://Art/frames/chort_run_anim_f2.png" type="Texture" id=6]
[ext_resource path="res://Art/frames/chort_idle_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://Art/frames/chort_run_anim_f0.png" type="Texture" id=8]
[ext_resource path="res://Art/testattack.png" type="Texture" id=9]
[ext_resource path="res://Sounds/my_sounds/normal_moster_death.wav" type="AudioStream" id=10]
[ext_resource path="res://Mobs/demons/chort.gd" type="Script" id=11]
[ext_resource path="res://Art/frames/chort_charge2.png" type="Texture" id=12]
[ext_resource path="res://Art/frames/chort_charge4.png" type="Texture" id=13]
[ext_resource path="res://Art/frames/chort_charge3.png" type="Texture" id=14]
[ext_resource path="res://Art/frames/chort_charge1.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": true,
"name": "CHARGE_POWER",
"speed": 7.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "IDLE",
"speed": 7.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "WALK",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 8 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 6.35
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 51.49
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 51.49
radial_accel = 91.09
color = Color( 0.627451, 0.0235294, 0.0235294, 1 )

[sub_resource type="CircleShape2D" id=4]
radius = 2.0

[node name="chort" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 6
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "CHARGE_POWER"
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 2 )
shape = SubResource( 2 )

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.8
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 3 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="Node2D" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Node2D"]
position = Vector2( 9, 0 )

[node name="Testattack" type="Sprite" parent="Node2D/Position2D"]
visible = false
rotation = -0.436332
scale = Vector2( 0.0459866, 0.0432243 )
z_index = 3
texture = ExtResource( 9 )

[node name="SliceTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="CollisionArea" type="Area2D" parent="."]
z_index = 5
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 1, 2 )
scale = Vector2( 6, 6 )
z_index = 4
shape = SubResource( 4 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -9.0
pitch_scale = 1.2
attenuation = 3.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ChargeCooldown" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ChargingTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="SliceTimer" to="." method="_on_SliceTimer_timeout"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_CollisionArea_body_entered"]
[connection signal="body_exited" from="CollisionArea" to="." method="_on_CollisionArea_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="ChargeCooldown" to="." method="_on_ChargeCooldown_timeout"]
[connection signal="timeout" from="ChargingTimer" to="." method="_on_ChargingTimer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
